# bridge-sdk

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  bridge_config.py  docker-entrypoint.sh  entrypoint.sh  main.py  pyproject.toml
.claude/skills/bridge-pipeline/: SKILL.md
.github/workflows/: ci.yml  release.yml
action/: action.yml
bridge_sdk/: __init__.py  annotations.py  bridge_sidecar_client.py  cli.py  eval.py  eval_binding.py  eval_conditions.py  eval_data.py  eval_function.py  eval_types.py  exceptions.py  function_schema.py  logger.py  models.py  pipeline.py  step.py  step_data.py  step_function.py  utils.py
bridge_sdk/proto/: __init__.py  bridge_sidecar.proto  bridge_sidecar_pb2.py  bridge_sidecar_pb2.pyi  bridge_sidecar_pb2_grpc.py
examples/: __init__.py  agent_example.py  example.py  multimodal_agent_example.py  webhook_example.py  webhook_generic_example.py
lib/: __init__.py  agent.py  annotations.py  bridge_sidecar_client.py  function_schema.py  grpc_client.py  step.py  step_data.py  utils.py
proto/: bridge.proto  bridge_pb2.py  bridge_pb2_grpc.py  bridge_sidecar_pb2.py  bridge_sidecar_pb2_grpc.py
scripts/: post_execution_test.sh  setup_test.sh
skills/bridge-pipelines/: SKILL.md
skills/bridge-pipelines/references/: agents.md  cli.md  evals.md  web-integration.md
tests/: __init__.py  test_bridge_sidecar_client.py  test_eval.py  test_invoke_step.py  test_pipeline.py  test_serialization.py  test_step.py
(+4 files in other folders)
