[project]
name = "bridge-lib"
version = "0.1.0"
description = "A Python project with pydantic"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "temporalio>=1.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "proto", "examples"]

[dependency-groups]
dev = ["pytest>=7.0.0"]
