[project]
name = "bridge-sdk"
version = "0.1.0"
description = "Python SDK for defining workflow steps"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "temporalio>=1.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
bridge = "bridge_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge_sdk"]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]
